--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "cookie": "^0.4.0",
     "express": "^4.17.1",
     "express-pino-logger": "^4.0.0",
+    "jsonwebtoken": "^8.5.1",
+    "mysql": "^2.18.1",
     "node-env-run": "^3.0.2",
     "node-sass": "^4.13.0",
     "nodemon": "^2.0.2",
@@ -28,7 +30,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "nodemon server/index"
   },
   "eslintConfig": {
     "extends": "react-app"
