Update yaml for server

--- a/app.yaml
+++ b/app.yaml
@@ -1,4 +1,7 @@
 runtime: nodejs10
+
+entrypoint: node server/index.js
+
 env_variables:
   CLOUD_INSTANCE: capstone-project-4503:us-east1:capstone-project-4503
 
